tests and dockers

--- a/client/index.html
+++ b/client/index.html
@@ -31,8 +31,12 @@
         <button id="btn-down-right" onclick="sendDirection(1, -1)"><span>↘</span></button>
       </div>
     </div>
+    <div class="camera_window">
+      <img id="camera_img" src="data:image/png;base64, " alt="Camera feeed" />
+    </div>
   </div>
 
   <script src="renderer.js"></script>
+
 </body>
 </html>
